# dj-uploader

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yaml
assets/: dj-uploader.icns
scripts/: README.md  build-and-sign-macos.sh  bundle-macos.sh  cert-helper.sh  create-dmg.sh  create-release.sh  make_icons.sh
src/: audio.rs  config.rs  gui.rs  main.rs  updater.rs
ui/: main.slint
