[package]
name = "dj-uploader"
version = "2025.50.0"
edition = "2024"

[[bin]]
name = "dj-uploader"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.25", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
url = "2.4"
urlencoding = "2.1"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
webbrowser = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
slint = "1.3"
aes-gcm = "0.10"
hex = "0.4"
rfd = "0.14"
symphonia = { version = "0.5.5", features = ["all"] }
minimp3 = "0.5"
hound = "3.5"
[build-dependencies]
serde_json = "1.0"
slint-build = "1.3"
rand = "0.8"
aes-gcm = "0.10"
hex = "0.4"

# Add to Cargo.toml in each project
[profile.release]
panic = "abort"
opt-level = 3           # Optimize for size
lto = "fat"               # Link-time optimization
codegen-units = 1         # Better optimization at cost of compile time
strip = true        # Strip debug symbols
debug = false             # No debug info
debug-assertions = false

[lints.rust]
unsafe_code = "deny"
