[package]
name = "dj-uploader"
version = "2026.6.0"
edition = "2024"

[[bin]]
name = "dj-uploader"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0.100"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
env_logger = "0.11"
hex = "0.4"
hound = "3.5"
log = "0.4"
minimp3 = "0.6"
rand = "0.9"
reqwest = { version = "0.13.1", features = ["blocking", "json", "multipart"] }
rfd = "0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
slint = "1.14"
symphonia = { version = "0.5.5", features = ["all"] }
tokio = { version = "1.49", features = ["full"] }
url = "2.5"
urlencoding = "2.1"
webbrowser = "1.0"

[build-dependencies]
aes-gcm = "0.10"
hex = "0.4"
rand = "0.9"
serde_json = "1.0"
slint-build = "1.14"

[lints.rust]
unsafe_code = "deny"

# Add to Cargo.toml in each project
[profile.release]
opt-level = 3  # Optimize for size
debug = false  # No debug info
strip = true  # Strip debug symbols
debug-assertions = false
lto = "fat"  # Link-time optimization
panic = "abort"
codegen-units = 1  # Better optimization at cost of compile time
